--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,6 +33,7 @@
     <string name="user">Usuario:</string>
     <string name="contra">Contraseña:</string>
     <string name="fechar">Fecha Registro:</string>
+    <string name="fechac">Fecha Creación:</string>
     <string name="ntipoen">Nombre Tipo Encuesta:</string>
     <string name="nencuesta">Nombre Encuesta:</string>
     <string name="estado">Estado:</string>
@@ -54,21 +55,5 @@
     <string name="tres">Respuesta:</string>
     <string name="coret">Es correcta:</string>
     <string name="intento">Intento:</string>
-    <string name="title_activity_login">loginA</string>
-    <string name="prompt_email">Email</string>
-    <string name="prompt_password">Password</string>
-    <string name="action_sign_in">Sign in or register</string>
-    <string name="action_sign_in_short">Sign in</string>
-    <string name="welcome">"Welcome !"</string>
-    <string name="invalid_username">Not a valid username</string>
-    <string name="invalid_password">Password must be >5 characters</string>
-    <string name="login_failed">"Login failed"</string>
-    <!-- Strings used for fragments for navigation -->
-    <string name="first_fragment_label">First Fragment</string>
-    <string name="second_fragment_label">Second Fragment</string>
-    <string name="next">Next</string>
-    <string name="previous">Previous</string>
 
-    <string name="hello_first_fragment">Hello first fragment</string>
-    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
 </resources>
